--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -7,12 +7,15 @@
   min-width: 200px;
   width: 97.5%;
 
-  li > a {
-    color: $cor-principal-clara;
+  li {
+    overflow-x: hidden;
+      > a {
+      color: $cor-principal-clara;
 
-    &:hover, &:focus {
-      background-color: $cor-principal-clara;
-      color: white;
+      &:hover, &:focus {
+        background-color: $cor-principal-clara;
+        color: white;
+      }
     }
   }
 
@@ -123,13 +126,14 @@
   margin-bottom: 0;
 }
 
-.input-display[readonly] {
+.display {
   background-color: $cor-principal-clara;
-  font-size: 1.8em;
+  font-size: 2.1em;
   color: white;
   text-align: center;
+  width: 100%;
   height: 50px;
-  border: none;
+  border-radius: 5px;
 }
 
 #tabela-pagamento {
