--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -2,6 +2,23 @@ body {
   background-color: #ddd;
   padding-bottom: 100px; }
 
+#loading {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100000;
+  background-color: rgba(0, 0, 0, 0.6); }
+  #loading > div {
+    position: absolute;
+    transform: scale(0.75);
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; }
+
 .centerY {
   position: absolute;
   top: 50%;
@@ -15,7 +32,7 @@ body {
   width: 100%;
   margin: 0 auto; }
 
-.center-absolute, alerta {
+.center-absolute, .alerta {
   position: absolute;
   top: 0px;
   right: 0px;
@@ -46,7 +63,7 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   border: 1px solid #6481bb;
   box-shadow: 0 0 6px #6481bb; }
 
-alerta {
+.alerta {
   text-align: center; }
 
 .tabela, #tabela-orcamento, #tabela-pagamento {
@@ -261,6 +278,20 @@ alerta {
   width: 7.5%; }
 #tabela-orcamento th:nth-child(2), #tabela-orcamento td:nth-child(2) {
   width: 40%; }
+#tabela-orcamento td:nth-child(4) span, #tabela-orcamento td:nth-child(6) span, #tabela-orcamento td:nth-child(7) span {
+  display: inherit; }
+#tabela-orcamento td:nth-child(4) input, #tabela-orcamento td:nth-child(6) input, #tabela-orcamento td:nth-child(7) input {
+  display: none;
+  width: 100%;
+  text-align: center;
+  margin: 0; }
+#tabela-orcamento td:nth-child(4):hover, #tabela-orcamento td:nth-child(6):hover, #tabela-orcamento td:nth-child(7):hover {
+  padding-top: 5px;
+  padding-bottom: 4px; }
+  #tabela-orcamento td:nth-child(4):hover span, #tabela-orcamento td:nth-child(6):hover span, #tabela-orcamento td:nth-child(7):hover span {
+    display: none; }
+  #tabela-orcamento td:nth-child(4):hover input, #tabela-orcamento td:nth-child(6):hover input, #tabela-orcamento td:nth-child(7):hover input {
+    display: inherit; }
 
 #controle-tabela-orcamento .row {
   margin-top: 0;
@@ -274,5 +305,159 @@ alerta {
   width: 100%;
   height: 50px;
   border-radius: 5px; }
+
+@-webkit-keyframes uil-default-anim {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+@keyframes uil-default-anim {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+.uil-default-css > div:nth-of-type(1) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(2) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: -0.4166666666666667s;
+  animation-delay: -0.4166666666666667s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(3) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: -0.33333333333333337s;
+  animation-delay: -0.33333333333333337s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(4) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: -0.25s;
+  animation-delay: -0.25s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(5) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: -0.16666666666666669s;
+  animation-delay: -0.16666666666666669s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(6) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: -0.08333333333333331s;
+  animation-delay: -0.08333333333333331s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(7) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(8) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: 0.08333333333333337s;
+  animation-delay: 0.08333333333333337s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(9) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: 0.16666666666666663s;
+  animation-delay: 0.16666666666666663s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(10) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: 0.25s;
+  animation-delay: 0.25s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(11) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: 0.33333333333333337s;
+  animation-delay: 0.33333333333333337s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
+
+.uil-default-css > div:nth-of-type(12) {
+  -webkit-animation: uil-default-anim 1s linear infinite;
+  animation: uil-default-anim 1s linear infinite;
+  -webkit-animation-delay: 0.41666666666666663s;
+  animation-delay: 0.41666666666666663s; }
+
+.uil-default-css {
+  position: relative;
+  background: none;
+  width: 200px;
+  height: 200px; }
 
 /*# sourceMappingURL=global.css.map */
