--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -12,8 +12,8 @@
       <div class="head">
         <h3>Vendedor
           <span ng-if="!formularios.vendedor && orcamento.pedido.vendedor.nome"> &raquo; ({{orcamento.pedido.vendedor.codigo}} - {{orcamento.pedido.vendedor.nome}})</span>
-          <span ng-if="formularios.vendedor" class="glyphicon glyphicon-menu-up"></span>
-          <span ng-if="!formularios.vendedor" class="glyphicon glyphicon-menu-down"></span>
+          <a href=""><span ng-if="formularios.vendedor" class="glyphicon glyphicon-menu-up"></span></a>
+          <a href=""><span ng-if="!formularios.vendedor" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
       </div>
     </div>
@@ -21,7 +21,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="number" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" press-enter="orcamento.buscaVendedorPorCodigo(cdVendedor)">
+          <input type="number" id="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" press-enter="orcamento.buscaVendedorPorCodigo(cdVendedor)">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaVendedorPorCodigo(cdVendedor)"><span class="glyphicon glyphicon-search"></span></button>
           </span>
@@ -36,61 +36,6 @@
     </div>
   </div>
 
-  <!--CLIENTE-->
-  <br>
-  <div class="row card">
-    <div id="form-cliente" class="col-md-12" ng-init="formularios.cliente = true" ng-click="formularios.cliente = !formularios.cliente; orcamento.scrollTo($event);">
-      <div class="head">
-        <h3>Cliente
-          <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}})</span>
-          <span ng-if="formularios.cliente" class="glyphicon glyphicon-menu-up"></span>
-          <span ng-if="!formularios.cliente" class="glyphicon glyphicon-menu-down"></span>
-        </h3>
-      </div>
-    </div>
-    <div class="col-md-12" uib-collapse="!formularios.cliente">
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>Código</h4></div>
-        <div class="input-group">
-          <input type="number" class="form-control" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)">
-          <span class="input-group-btn">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo(cdCliente)"><span class="glyphicon glyphicon-search"></span></button>
-          </span>
-        </div>
-      </div>
-      <div class="col-xs-9 col-sm-9">
-        <div><h4>Nome</h4></div>
-        <div id="nome-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.nome" readonly="true">
-        </div>
-      </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>Telefone</h4></div>
-        <div id="tel-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.telefone" readonly="true">
-        </div>
-      </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>Celular</h4></div>
-        <div id="cel-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.celular" readonly="true">
-        </div>
-      </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>Email</h4></div>
-        <div id="email-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.email" readonly="true">
-        </div>
-      </div>
-      <div class="col-xs-3 col-sm-3">
-        <div><h4>Alguma coisa</h4></div>
-        <div id="">
-          <input type="text" class="form-control" readonly="true">
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!--PRODUTOS-->
   <br>
   <div class="row card">
@@ -98,8 +43,8 @@
       <div class="head">
         <h3>Produtos
           <span ng-if="!formularios.produtos && orcamento.pedido.items.length > 0"> &raquo; ({{orcamento.pedido.items.length}} Produtos - Total: {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}})</span>
-          <span ng-if="formularios.produtos" class="glyphicon glyphicon-menu-up"></span>
-          <span ng-if="!formularios.produtos" class="glyphicon glyphicon-menu-down"></span>
+          <a href=""><span ng-if="formularios.produtos" class="glyphicon glyphicon-menu-up"></span></a>
+          <a href=""><span ng-if="!formularios.produtos" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
       </div>
     </div>
@@ -135,15 +80,14 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Quantidade</h4></div>
         <div class="input-group">
-          <input id="quantidade" type="number" class="form-control" ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" press-enter="orcamento.avancar('#percent')">
-          <span class="input-group-addon" ng-if="produto.unidade">{{item.produto.unidade}}</span>
-          <span class="input-group-addon" ng-if="!produto.unidade">(un)</span>
+          <input id="quantidade" type="text" class="form-control" filtro-moeda number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" press-enter="orcamento.avancar('#percent')">
+          <span class="input-group-addon">{{item.produto.unidade || '(un)'}}</span>
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Desconto %</h4></div>
         <div class="input-group">
-          <input id="percent" type="text" class="form-control" filtro-moeda ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" ng-model-options="{ debounce: 500 }" press-enter="orcamento.avancar('#dinheiro')">
+          <input id="percent" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);"  press-enter="orcamento.avancar('#dinheiro')">
           <span class="input-group-addon">%</span>
         </div>
       </div>
@@ -151,7 +95,7 @@
         <div><h4>Desconto R$</h4></div>
         <div class="input-group">
           <span class="input-group-addon">R$</span>
-          <input id="dinheiro" type="text" class="form-control" filtro-moeda ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" ng-model-options="{ debounce: 500 }" press-enter="orcamento.addProduto()">
+          <input id="dinheiro" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" press-enter="orcamento.addProduto()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
@@ -184,10 +128,10 @@
               <td>{{i.produto.codigo}}</td>
               <td>{{i.produto.nome | limitTo : 50 }}</td>
               <td>{{i.produto.unidade}}</td>
-              <td><span>{{i.quantidade}}</span><input type="number" ng-model="i.quantidade"></td>
+              <td><span>{{i.quantidade | currency : ""}}</span><input filtro-moeda number-only type="text" ng-model="i.quantidade"></td>
               <td>{{i.produto.preco | currency}}</td>
-              <td><span>{{i.descontoPercent | currency : ""}}%</span><input type="number" filtro-moeda ng-model="i.descontoPercent" ng-change="i.setDescontoPercent(i.descontoPercent)"></td>
-              <td><span>{{i.descontoDinheiro | currency : "R$ "}}</span><input type="number" filtro-moeda ng-model="i.descontoDinheiro" ng-change="i.setDescontoDinheiro(i.descontoDinheiro)"></td>
+              <td><span>{{i.descontoPercent | currency : ""}}%</span><input type="text" filtro-moeda number-only ng-model="i.descontoPercent" ng-change="i.setDescontoPercent(i.descontoPercent)"></td>
+              <td><span>{{i.descontoDinheiro | currency : "R$ "}}</span><input type="text" filtro-moeda number-only ng-model="i.descontoDinheiro" ng-change="i.setDescontoDinheiro(i.descontoDinheiro)"></td>
               <td>{{i.getTotalComDesconto() | currency: 'R$ '}}</td>
               <td>
                 <a tabindex="-1" ng-click="orcamento.removerItem(i)"><span class="glyphicon glyphicon-trash"></span></a>
@@ -213,6 +157,61 @@
         <div class="col-xs-4 col-sm-4 col-md-4">
           <div><h4>Total do pedido</h4></div>
           <div class="display">{{orcamento.pedido.getValorTotalComDesconto() | currency : "R$ "}}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--CLIENTE-->
+  <br>
+  <div class="row card">
+    <div id="form-cliente" class="col-md-12" ng-init="formularios.cliente = true" ng-click="formularios.cliente = !formularios.cliente; orcamento.scrollTo($event);">
+      <div class="head">
+        <h3>Cliente
+          <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}})</span>
+          <a href=""><span ng-if="formularios.cliente" class="glyphicon glyphicon-menu-up"></span></a>
+          <a href=""><span ng-if="!formularios.cliente" class="glyphicon glyphicon-menu-down"></span></a>
+        </h3>
+      </div>
+    </div>
+    <div class="col-md-12" uib-collapse="!formularios.cliente">
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Código</h4></div>
+        <div class="input-group">
+          <input type="number" class="form-control" id="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)">
+          <span class="input-group-btn">
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo(cdCliente)"><span class="glyphicon glyphicon-search"></span></button>
+          </span>
+        </div>
+      </div>
+      <div class="col-xs-9 col-sm-9">
+        <div><h4>Nome</h4></div>
+        <div id="nome-cliente">
+          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.nome" readonly="true" tabindex="-1">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Telefone</h4></div>
+        <div id="tel-cliente">
+          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.telefone" readonly="true" tabindex="-1">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Celular</h4></div>
+        <div id="cel-cliente">
+          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.celular" readonly="true" tabindex="-1">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Email</h4></div>
+        <div id="email-cliente">
+          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.email" readonly="true" tabindex="-1">
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3">
+        <div><h4>Alguma coisa</h4></div>
+        <div id="">
+          <input type="text" class="form-control" readonly="true">
         </div>
       </div>
     </div>
