--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -178,42 +178,63 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="number" class="form-control" id="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)">
+          <input type="number" class="form-control" id="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente)" ng-readonly="cliente.novo">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo(cdCliente)"><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()"><span class="glyphicon glyphicon-plus"></span></button>
           </span>
         </div>
       </div>
       <div class="col-xs-9 col-sm-9">
         <div><h4>Nome</h4></div>
         <div id="nome-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.nome" readonly="true" tabindex="-1">
+          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" tabindex="-1">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Telefone</h4></div>
         <div id="tel-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.telefone" readonly="true" tabindex="-1">
+          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.telefone" ng-readonly="!cliente.novo" tabindex="-1">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Celular</h4></div>
         <div id="cel-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.celular" readonly="true" tabindex="-1">
+          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.celular" ng-readonly="!cliente.novo" tabindex="-1">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Email</h4></div>
         <div id="email-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.email" readonly="true" tabindex="-1">
+          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" tabindex="-1">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Alguma coisa</h4></div>
         <div id="">
-          <input type="text" class="form-control" readonly="true">
+          <input type="text" class="form-control" ng-readonly="!cliente.novo">
         </div>
       </div>
+
+      <div class="col-xs-6 col-sm-6" uib-collapse="!cliente.novo">
+        <div><h4></h4></div>
+        <div>
+
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">
+        <div><h4></h4></div>
+        <div>
+          <button class="btn btn-default">Salvar</button>
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">
+        <div><h4></h4></div>
+        <div>
+          <button class="btn btn-default" ng-click="cliente.novo = false">Cancelar</button>
+        </div>
+      </div>
+
     </div>
   </div>
 
