--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -1,9 +1,3 @@
-<style>
-
-
-
-</style>
-
 <div id="formulario-orcamento">
 
   <!--VENDEDOR-->
@@ -12,6 +6,7 @@
       <div class="head">
         <h3>Vendedor
           <span ng-if="!formularios.vendedor && orcamento.pedido.vendedor.nome"> &raquo; ({{orcamento.pedido.vendedor.codigo}} - {{orcamento.pedido.vendedor.nome}})</span>
+          <a href="" class="limpar" title="Limpar campos" ng-click="$event.stopPropagation();"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.vendedor" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.vendedor" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
@@ -42,7 +37,8 @@
     <div id="form-produtos" class="col-md-12" ng-init="formularios.produtos = true" ng-click="formularios.produtos = !formularios.produtos; orcamento.scrollTo($event);">
       <div class="head">
         <h3>Produtos
-          <span ng-if="!formularios.produtos && orcamento.pedido.items.length > 0"> &raquo; ({{orcamento.pedido.items.length}} Produtos - Total: {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}})</span>
+          <span ng-if="!formularios.produtos && orcamento.pedido.items.length > 0"> &raquo; ({{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'Produtos' : 'Produto'}} - Total: {{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}})</span>
+          <a href="" class="limpar" title="Limpar campos" ng-click="$event.stopPropagation();"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.produtos" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.produtos" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
@@ -95,7 +91,7 @@
         <div><h4>Desconto R$</h4></div>
         <div class="input-group">
           <span class="input-group-addon">R$</span>
-          <input id="dinheiro" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" press-enter="orcamento.addProduto()">
+          <input id="dinheiro" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" press-enter="orcamento.addItem()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
@@ -168,7 +164,8 @@
     <div id="form-cliente" class="col-md-12" ng-init="formularios.cliente = true" ng-click="formularios.cliente = !formularios.cliente; orcamento.scrollTo($event);">
       <div class="head">
         <h3>Cliente
-          <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}})</span>
+          <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{cliente.novo ? 'Novo Cliente' : orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}})</span>
+          <a href="" class="limpar" title="Limpar campos" ng-click="orcamento.pedido.removeCliente(); $event.stopPropagation();"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.cliente" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.cliente" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
@@ -186,27 +183,27 @@
         </div>
       </div>
       <div class="col-xs-9 col-sm-9">
-        <div><h4>Nome</h4></div>
+        <div><h4>Nome <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div id="nome-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" tabindex="-1">
+          <input type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
-        <div><h4>Telefone</h4></div>
+        <div><h4>Telefone <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div id="tel-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.telefone" ng-readonly="!cliente.novo" tabindex="-1">
+          <input type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ng-readonly="!cliente.novo">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
-        <div><h4>Celular</h4></div>
+        <div><h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div id="cel-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.celular" ng-readonly="!cliente.novo" tabindex="-1">
+          <input type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ng-readonly="!cliente.novo">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
-        <div><h4>Email</h4></div>
+        <div><h4>Email <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div id="email-cliente">
-          <input type="text" class="form-control" ng-value="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" tabindex="-1">
+          <input type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
@@ -216,22 +213,23 @@
         </div>
       </div>
 
-      <div class="col-xs-6 col-sm-6" uib-collapse="!cliente.novo">
+      <div class="col-xs-9 col-sm-9" uib-collapse="!cliente.novo">
         <div><h4></h4></div>
         <div>
-
+          <h5>1 Campo obrigatório</h5>
+          <h5>2 Necessário ao menos uma forma de contato</h5>
         </div>
       </div>
+      <!--<div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">-->
+        <!--<div><h4></h4></div>-->
+        <!--<div>-->
+          <!--<button class="btn btn-default btn-form">Adicionar</button>-->
+        <!--</div>-->
+      <!--</div>-->
       <div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">
-        <div><h4></h4></div>
+        <h4>&nbsp;</h4>
         <div>
-          <button class="btn btn-default">Salvar</button>
-        </div>
-      </div>
-      <div class="col-xs-3 col-sm-3" uib-collapse="!cliente.novo">
-        <div><h4></h4></div>
-        <div>
-          <button class="btn btn-default" ng-click="cliente.novo = false">Cancelar</button>
+          <button class="btn btn-default btn-form" ng-click="cliente.novo = false; orcamento.pedido.removeCliente()">Cancelar</button>
         </div>
       </div>
 
@@ -290,4 +288,17 @@
       </div>
     </div>
   </div>
+
+  <br>
+  <div class="row">
+    <div class="col-md-6"></div>
+    <div class="col-sm-6 col-md-3">
+      <button class="btn-orcamento" ng-click="orcamento.limpar()"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <button class="btn-orcamento" ng-click="orcamento.salvar()"><span class="glyphicon glyphicon-floppy-disk"></span> Salvar</button>
+    </div>
+  </div>
+
+
 </div>
